# server/src/controllers/document.controllers.ts
@@ -7,6 +7,7 @@ import {
   deleteDocumentByName,
   getDocumentTypes,
   getDocumentByType,
+  searchDocuments,
 } from '../services/document.service';
 // import { addingDocument, deleteDocumentByName, getAllDocuments, getDocumentById, updatingDocument } from '../services/document.service';
 import { IDocument } from '@interfaces/document.interface';
@@ -344,3 +345,98 @@ export const deleteDocumentController = async (
     next(error); // Pass the error to the error handler middleware
   }
 };
+
+
+/**
+ * @swagger
+ * /documents/search:
+ *   get:
+ *     summary: Search documents by keyword
+ *     description: Retrieve all documents that match the specified keyword in the title or summary.
+ *     parameters:
+ *       - in: query
+ *         name: keyword
+ *         required: true
+ *         description: The keyword to search for in the title or summary of the document.
+ *         schema:
+ *           type: string
+ *     responses:
+ *       200:
+ *         description: A list of documents that match the specified keyword.
+ *         content:
+ *           application/json:
+ *             schema:
+ *               type: object
+ *               properties:
+ *                 documents:
+ *                   type: array
+ *                   items:
+ *                     $ref: '#/components/schemas/Document'
+ *       404:
+ *         description: No documents found for the specified keyword.
+ *       500:
+ *         description: Internal server error.
+ *
+ * components:
+ *   schemas:
+ *     Document:
+ *       type: object
+ *       properties:
+ *         id:
+ *           type: string
+ *           example: '60d0fe4f5311236168a109ca'
+ *         title:
+ *           type: string
+ *           example: 'Sample Document'
+ *         stakeholders:
+ *           type: string
+ *           example: 'Stakeholder 1'
+ *         scale:
+ *           type: string
+ *           example: '1:1000'
+ *         type:
+ *           type: string
+ *           example: 'AGREEMENT'
+ *         date:
+ *           type: string
+ *           example: '2024-11-05'
+ *         connections:
+ *           type: array
+ *           items:
+ *             type: object
+ *             properties:
+ *               document:
+ *                 type: string
+ *                 example: '60d0fe4f5311236168a109ca'
+ *               type:
+ *                 type: string
+ *                 example: 'LINK1'
+ *         language:
+ *           type: string
+ *           example: 'English'
+ *         media:
+ *           type: array
+ *           items:
+ *             type: string
+ *         coordinates:
+ *           type: string
+ *         summary:
+ *           type: string
+ *           example: 'This is a summary of the document.'
+ */
+
+
+export const searchDocumentsController = async (
+  req: Request,
+  res: Response,
+  next: NextFunction,): Promise<void> => {
+  try {
+    const keyword = req.query.keyword as string;
+    console.log(keyword);
+
+    const documents = await searchDocuments(keyword);
+    res.status(200).json(documents);
+  } catch (error) {
+    next(error); // Pass the error to the error handler middleware
+  }
+  }
